test/typecheck/bad-invoke-type-mismatch.txt
;;; ERROR: 1
;;; FLAGS: --spec
(module
  (func (param i32))
  (export "foo" 0))
(invoke "foo" (f32.const 1.5))
(;; STDERR ;;;
out/test/typecheck/bad-invoke-type-mismatch.txt:5:17: error: syntax error, unexpected NAT, expecting (
  (export "foo" 0))
                ^
;;; STDERR ;;)
